fix css error that caused horizontal scrolling

--- a/assets/themes/hooligan/_sass/_custom.scss
+++ b/assets/themes/hooligan/_sass/_custom.scss
@@ -6,7 +6,6 @@
 }
 
 #main {
-  overflow:auto;
   padding-bottom:100px; /* this needs to be bigger than footer height*/
 }
 
